components/todo-app/overlays/prod/todo-backend-prod.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: backend
        image: ghcr.io/chrishrb/ghcr.io/chrishrb/todo-backend:v0.2.0
