components/todo-app/overlays/prod/todo-frontend-prod.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: frontend
        image: ghcr.io/chrishrb/ghcr.io/chrishrb/todo-frontend:v0.2.0
